GUACAMOLE-2137: Refactor code following code audit by SAST/Linter PMD   - Use final on all local and method arguments where possible   - Comment all public methods and constructor   - Catch only specific exceptions   - Remove unused imports   - Remove code that can no longer be used   - No nested if block more than 2 levels deep   - Prefer getter functions to direct access to class variables   - Don't throw and catch exception in the same function, the the catch blocks     closer to where the exceptions are thrown   - Split HvClientProvider out from HvSecretService to reduce complexity and     increase readibility of both classes   - Create helper function for HvSecretService.prepareToken to regroup similar     logic and reduce CognitiveComplexity of prepareToken   - Split HvClient fallback logic into a seperate function, use an ordered List     of HvClients in this function to simplify the logic